# bus-benchmark

./: .gitignore  README.md  pyproject.toml
bus_benchmark/: CREDITS.md  config.py
bus_benchmark/bison-importer/: README.md  config.ini.example  ctx.py  import-csvs-kv6.py  import-csvs-travel-time.py  import.py  kv6.py  kv7.py
bus_benchmark/bison-state-machine/: .gitignore  README.md  process-all.sh  process.py
bus_benchmark/experiments/: fixed_interval_dataset.py  metrics_manager.py  multi_step_dataset.py  run_metrics.py  utils.py
bus_benchmark/experiments/model/: convlstm_model.py  convlstm_model_trainer.py  lstm_model.py  lstm_model_trainer.py  model_trainer_base.py
bus_benchmark/preprocessing/bison-importer/: import-csvs-dwell-time.py  import-csvs-kv7-line.py  import-csvs-kv7-timingpoint.py  import-csvs-kv7-usertimingpoint.py  import-kv6-bulk.sh  import-kv7-bulk.sh
bus_benchmark/preprocessing/bison-state-machine/: export.py
bus_benchmark/preprocessing/sampling/: validate.py
bus_benchmark/sampling/: validate-all.sh
bus_benchmark/sql/: 02-create-schemas.sql  03-kv7-stops.sql  04-filter-data.sql
notebooks/: get_results.ipynb  plots.ipynb  sampling.ipynb
scripts/: convert_csv_to_parquet_files.py
